--- a/package.json
+++ b/package.json
@@ -9,13 +9,17 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "antd": "^5.4.0",
     "autoprefixer": "10.4.14",
     "eslint": "8.37.0",
     "eslint-config-next": "13.3.0",
     "next": "13.3.0",
+    "next-seo": "^6.0.0",
     "postcss": "8.4.21",
+    "prismjs": "^1.29.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-simple-code-editor": "^0.13.1",
     "tailwindcss": "3.3.1"
   }
 }
