--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "autoprefixer": "10.4.14",
     "eslint": "8.37.0",
     "eslint-config-next": "13.3.0",
+    "lodash": "^4.17.21",
     "next": "13.3.0",
     "next-seo": "^6.0.0",
     "postcss": "8.4.21",
